--- a/src/app/module/launch/containers/launch/launch.component.html
+++ b/src/app/module/launch/containers/launch/launch.component.html
@@ -9,6 +9,20 @@
     <mat-toolbar color="primary">Lançamentos anteriores</mat-toolbar>
 
     <div class="example-container mat-elevation-z8">
+      <app-courses-list
+      *ngIf="launchs$ | async as launchs; else loading"
+      [launchs]="launchs"
+      (add)="onAdd()"
+      (edit)="onEdit($event)"
+      (remove)="onRemove($event)"
+      ></app-courses-list>
+
+      <ng-template #loading>
+        <div class="loading-spinner">
+          <mat-spinner></mat-spinner>
+        </div>
+      </ng-template>
+
         <p>Listagem de lançamentos</p>
     </div>
 </mat-card>
