--- a/src/app/module/launch/containers/launch/launch.component.html
+++ b/src/app/module/launch/containers/launch/launch.component.html
@@ -9,13 +9,13 @@
     <mat-toolbar color="primary">Lançamentos anteriores</mat-toolbar>
 
     <div class="example-container mat-elevation-z8">
-      <app-courses-list
-      *ngIf="launchs$ | async as launchs; else loading"
-      [launchs]="launchs"
-      (add)="onAdd()"
-      (edit)="onEdit($event)"
-      (remove)="onRemove($event)"
-      ></app-courses-list>
+      <app-launch-list
+        *ngIf="launchs$ | async as launchs; else loading"
+        [launchs]="launchs"
+        (add)="onAdd()"
+        (edit)="onEdit($event)"
+        (remove)="onRemove($event)"
+      ></app-launch-list>
 
       <ng-template #loading>
         <div class="loading-spinner">
