--- a/src/app/module/launch/containers/launch/launch.component.scss
+++ b/src/app/module/launch/containers/launch/launch.component.scss
@@ -17,3 +17,12 @@ mat-card {
   align-items: center;
   justify-content: center;
 }
+
+.card-saldo {
+  background-color: green; 
+  color: #ffffff;
+}
+
+.card-transacao {
+  background-color: #E8EAED;
+}
