--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -5,9 +5,9 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item href="#">Adicionar</a>
+      <a mat-list-item href="#">Extrato</a>
+      <a mat-list-item href="#">Plano de Ação</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -20,7 +20,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>FinDayWebApp</span>
+      <span>FinDay</span>
     </mat-toolbar>
     <!-- Add Content Here -->
     <router-outlet></router-outlet>
