feat: get balance and list of launch to home.

--- a/src/app/module/launch/components/launch-list/launch-list.component.html
+++ b/src/app/module/launch/components/launch-list/launch-list.component.html
@@ -6,13 +6,14 @@
   </ng-container>
 
   <!-- Category Column -->
-  <ng-container matColumnDef="category">
+  <ng-container matColumnDef="value">
     <mat-header-cell *matHeaderCellDef>Forma de Pagamento</mat-header-cell>
     <mat-cell *matCellDef="let launch">
-      {{ launch.type }}
+      <!-- {{ launch.type }}
       <mat-icon aria-hidden="false" aria-label="Forma de Pagamento">{{
         launch.type | payment
-        }}</mat-icon>
+        }}</mat-icon> -->
+        teste
     </mat-cell>
   </ng-container>
 
