--- a/src/app/module/launch/containers/launch/launch.component.html
+++ b/src/app/module/launch/containers/launch/launch.component.html
@@ -4,10 +4,10 @@
     <p>Sábado, 03/06/2023</p>
   </div>
   <h2>Saldo</h2>
-  <h2>R$ 19,99</h2>
+  <h2>R$ {{ balance.value }}</h2>
   <hr>
-  <h2>Conta Corrente</h2>
-  <h2>R$ 1000,00</h2>
+  <!-- <h2>Conta Corrente</h2>
+  <h2>R$ 1000,00</h2> -->
   
 </mat-card>
 
