feat: drown home page.

--- a/finday-web-app/src/app/modules/layout/components/navbar/profile-menu/profile-menu.component.html
+++ b/finday-web-app/src/app/modules/layout/components/navbar/profile-menu/profile-menu.component.html
@@ -37,20 +37,20 @@
     <ul class="my-2 mx-4">
       <li
         class="block cursor-pointer rounded-md px-3 py-2 text-sm font-semibold text-gray-700 hover:bg-gray-100 hover:text-primary-500 dark:text-night-200 dark:hover:bg-night-500 dark:hover:text-primary-500">
-        Your Profile
+        Perfil
       </li>
       <li
         class="block cursor-pointer rounded-md px-3 py-2 text-sm font-semibold text-gray-700 hover:bg-gray-100 hover:text-primary-500 dark:text-night-200 dark:hover:bg-night-500 dark:hover:text-primary-500">
-        Language
+        Notificações
       </li>
       <li
         class="block cursor-pointer rounded-md px-3 py-2 text-sm font-semibold text-gray-700 hover:bg-gray-100 hover:text-primary-500 dark:text-night-200 dark:hover:bg-night-500 dark:hover:text-primary-500">
-        Settings
+        Configurações
       </li>
       <li
         routerLink="/auth"
         class="block cursor-pointer rounded-md px-3 py-2 text-sm font-semibold text-gray-700 hover:bg-gray-100 hover:text-primary-500 dark:text-night-200 dark:hover:bg-night-500 dark:hover:text-primary-500">
-        Sign out
+        Sair
       </li>
     </ul>
   </div>
