--- a/finday-web-app/src/app/modules/home/home.component.html
+++ b/finday-web-app/src/app/modules/home/home.component.html
@@ -8,16 +8,6 @@
             <span> - Inicio</span>
           </div>
         </div>
-        <!-- <div class="inline-block space-x-4">
-          <button
-            class="flex-none rounded-md bg-white px-4 py-2.5 text-xs font-semibold text-gray-500 hover:text-primary-500 dark:bg-night-600 dark:text-night-200 dark:hover:bg-night-500">
-            Junho
-          </button>
-          <button
-            class="flex-none rounded-md bg-primary-500 px-4 py-2.5 text-xs font-semibold text-white hover:bg-primary-600">
-            Julho
-          </button>
-        </div> -->
       </div>
     <!-- end Header -->
 
@@ -45,7 +35,7 @@
             Maio
           </button>
           <button
-            class="flex-none rounded-md bg-primary-500 px-4 py-2.5 text-xs font-semibold text-white hover:bg-primary-600">
+          class="flex-none rounded-md bg-white px-4 py-2.5 text-xs font-semibold text-gray-500 hover:text-primary-500 dark:bg-night-600 dark:text-night-200 dark:hover:bg-night-500">
             Julho
           </button>
           <button
@@ -53,7 +43,7 @@
             Julho
           </button>
           <button
-            class="flex-none rounded-md bg-primary-500 px-4 py-2.5 text-xs font-semibold text-white hover:bg-primary-600">
+          class="flex-none rounded-md bg-white px-4 py-2.5 text-xs font-semibold text-gray-500 hover:text-primary-500 dark:bg-night-600 dark:text-night-200 dark:hover:bg-night-500">
             Agosto
           </button>
           <button
@@ -61,7 +51,7 @@
             Setembro
           </button>
           <button
-            class="flex-none rounded-md bg-primary-500 px-4 py-2.5 text-xs font-semibold text-white hover:bg-primary-600">
+          class="flex-none rounded-md bg-white px-4 py-2.5 text-xs font-semibold text-gray-500 hover:text-primary-500 dark:bg-night-600 dark:text-night-200 dark:hover:bg-night-500">
             Outubro
           </button>
         </div>
@@ -71,26 +61,68 @@
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-4">
         <!-- Single Card -->
         <!-- Card -->
-        <div class="flex h-[420px] flex-col rounded-lg bg-white p-8 dark:bg-night-700">
+        <div class="flex h-[420px] flex-col rounded-lg bg-white p-8 pt-2 dark:bg-night-700">
             <!-- Image -->
-            <div
-                class="h-[240px] cursor-pointer rounded-md bg-cover transition duration-150 ease-in-out hover:opacity-75">
-            </div>
             <!-- Description  -->
-            <h2 class="text-md mt-6 font-semibold text-gray-900 dark:text-night-50">-----</h2>
-            <div class="flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300">
-                Last Bid: --- ETH
-                <span>---</span>
+            <h2 class="text-md mt-6 font-semibold text-gray-900 dark:text-night-50 pb-2">Saldos</h2>
+            <div class="flex items-end justify-between text-sm font-semibold text-gray-800 dark:text-night-300">
+                FLASH:
+                <span>R$ 1.528,76</span>
             </div>
+            <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300">
+              Valor Gasto:
+              <span>R$ 1.528,76</span>
+            </div>
+            <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300 pb-2">
+              Valor entrada Total:
+              <span>R$ 1.528,76</span>
+            </div>
+            <div class="flex items-end justify-between text-sm font-semibold text-gray-800 dark:text-night-300">
+                SALÁRIO CAST:
+                <span>R$ 1.528,76</span>
+            </div>
+            <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300">
+              Valor Gasto:
+              <span>R$ 1.528,76</span>
+            </div>
+            <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300 pb-2">
+              Valor entrada Total:
+              <span>R$ 1.528,76</span>
+            </div>
+            <div class="flex items-end justify-between text-sm font-semibold text-gray-800 dark:text-night-300">
+                ALELO:
+                <span>R$ 1.528,76</span>
+            </div>
+            <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300">
+              Valor Gasto:
+              <span>R$ 1.528,76</span>
+            </div>
+            <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300 pb-2">
+              Valor entrada Total:
+              <span>R$ 1.528,76</span>
+            </div>
+            <div class="flex items-end justify-between text-sm font-semibold text-gray-800 dark:text-night-300">
+                SALÁRIO FREELA:
+                <span>R$ 1.528,76</span>
+            </div>
+            <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300">
+              Valor Gasto:
+              <span>R$ 1.528,76</span>
+            </div>
+            <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300 pb-2">
+              Valor entrada Total:
+              <span>R$ 1.528,76</span>
+            </div>
+            
             <!-- Buttons -->
             <div class="mt-6 flex items-center justify-between">
                 <button
                     class="flex-none rounded-md bg-primary-500 px-4 py-2.5 text-xs font-semibold text-white hover:bg-primary-600">
-                    Place a Bid
+                    Adicionar Carteira
                 </button>
                 <button
                     class="flex-none rounded-md bg-gray-100 px-4 py-2.5 text-xs font-semibold text-gray-500 hover:bg-gray-200 dark:bg-night-600 dark:text-night-200 dark:hover:bg-night-500">
-                    View Item
+                    Origens
                 </button>
             </div>
         </div>
@@ -98,30 +130,184 @@
         <!-- end Single Card -->
         <!-- Single Card -->
         <!-- Card -->
-        <div class="flex h-[420px] flex-col rounded-lg bg-white p-8 dark:bg-night-700">
-            <!-- Image -->
-            <div
-                class="h-[240px] cursor-pointer rounded-md bg-cover transition duration-150 ease-in-out hover:opacity-75">
-            </div>
-            <!-- Description  -->
-            <h2 class="text-md mt-6 font-semibold text-gray-900 dark:text-night-50">-----</h2>
-            <div class="flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300">
-                Last Bid: --- ETH
-                <span>---</span>
-            </div>
-            <!-- Buttons -->
-            <div class="mt-6 flex items-center justify-between">
-                <button
-                    class="flex-none rounded-md bg-primary-500 px-4 py-2.5 text-xs font-semibold text-white hover:bg-primary-600">
-                    Place a Bid
-                </button>
-                <button
-                    class="flex-none rounded-md bg-gray-100 px-4 py-2.5 text-xs font-semibold text-gray-500 hover:bg-gray-200 dark:bg-night-600 dark:text-night-200 dark:hover:bg-night-500">
-                    View Item
-                </button>
-            </div>
+        <div class="flex h-[420px] flex-col rounded-lg bg-white p-8 pt-2 dark:bg-night-700">
+          <!-- Image -->
+          <!-- Description  -->
+          <h2 class="text-md mt-6 font-semibold text-gray-900 dark:text-night-50 pb-2">Planos de Ação</h2>
+          <div class="flex items-end justify-between text-sm font-semibold text-gray-800 dark:text-night-300 mb-2">
+              Viagem para Portão de galinhas:
+              <span class="rounded-md bg-primary-500 text-white">Curto prazo</span>
+          </div>
+          <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300">
+            Valor Acumulado:
+            <span>R$ 1.000,76</span>
+          </div>
+          <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300">
+            Tempo Investido:
+            <span>2 meses</span>
+          </div>
+          <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300">
+            Valor Meta:
+            <span>R$ 15.000,00</span>
+          </div>
+          <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300 pb-2 mb-3">
+            Tempo Restante para Realização:
+            <span>28 meses</span>
+          </div>
+          
+        <div class="flex items-end justify-between text-sm font-semibold text-gray-800 dark:text-night-300 mb-2">
+          Comprar Renault Duster:
+          <span class="rounded-md bg-night-100">Longo prazo</span>
         </div>
+        <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300">
+          Valor Acumulado:
+          <span>R$ 1.000,76</span>
+        </div>
+        <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300">
+          Tempo Investido:
+          <span>2 meses</span>
+        </div>
+        <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300">
+          Valor Meta:
+          <span>R$ 15.000,00</span>
+        </div>
+        <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300 pb-2 mb-3">
+          Tempo Restante para Realização:
+          <span>28 meses</span>
+        </div>
+
+        <!-- Buttons -->
+        <div class="mt-6 flex items-center justify-between">
+            <button
+                class="flex-none rounded-md bg-primary-500 px-4 py-2.5 text-xs font-semibold text-white hover:bg-primary-600">
+                Novo Plano
+            </button>
+        </div>
+      </div>
         <!-- end Card -->
         <!-- end Single Card -->
+
+        <!-- Dual Card -->
+        <div class="md:col-span-1">
+          <div class="flex-col rounded-lg bg-white px-8 py-8 dark:bg-night-700 sm:flex-row">
+            <div class="mb-4 flex items-center justify-between">
+              <div class="flex-col items-center">
+                <h3 class="text-md font-bold text-gray-900 dark:text-night-50">Entradas</h3>
+                <span class="text-sm text-gray-400 dark:text-night-300">Atualizado à 37 minutos</span>
+              </div>
+              <button
+                class="flex-none rounded-md bg-gray-100 px-4 py-2.5 text-xs font-semibold text-gray-500 hover:bg-gray-200 dark:bg-night-600 dark:text-night-200 dark:hover:bg-night-500">
+                Adicionar Entrada
+              </button>
+            </div>
+          
+            <div class="relative overflow-x-auto">
+              <table class="w-full table-auto">
+                <!--Table head-->
+                <thead class="text-xs uppercase text-gray-400 dark:text-night-300">
+                  <tr>
+                    <th class="py-3 text-left"></th>
+                    <th class="py-3 text-right">Valor</th>
+                    <th class="py-3 text-right"></th>
+                  </tr>
+                </thead>
+                <!--end Table head-->
+                <!--Table body-->
+                <tbody>
+                  <tr
+                    *ngFor="let auction of activeAuction"
+                    class="border-b border-dashed border-gray-200 hover:bg-gray-100 dark:border-night-500 dark:hover:bg-night-600">
+                    <td class="py-2 pr-2">
+                      <div class="flex items-center">
+                        <img [src]="auction.image" class="mr-2 h-10 w-10 flex-none rounded-lg" alt="" />
+                        <div class="flex flex-col justify-items-start">
+                          <a href="#" class="mb-1 text-sm font-semibold text-gray-900 dark:text-night-100 dark:hover:text-primary-500">
+                            {{auction.title}}</a>
+                          <span class="text-xs font-semibold text-gray-400 dark:text-night-300">{{ auction.date }}</span>
+                        </div>
+                      </div>
+                    </td>
+                    <td class="py-2 pl-2 text-right">
+                      <span class="text-sm font-semibold text-gray-400 dark:text-night-200">{{ auction.price | currency }}</span>
+                    </td>
+                    <td class="py-2 pl-2 text-right">
+                      <div class="flex justify-end">
+                        <button
+                          href="#"
+                          class="flex h-7 w-7 items-center justify-center rounded-md bg-gray-200 text-gray-400 dark:bg-night-500 dark:text-night-300">
+                          |||
+                        </button>
+                      </div>
+                    </td>
+                    
+                  </tr>
+                </tbody>
+                <!--end::Table body-->
+              </table>
+            </div>
+          </div>
+        </div>
+        <!-- end Dual Card -->
+        <!-- Dual Card -->
+        <div class="md:col-span-1">
+          <div class="flex-col rounded-lg bg-white px-8 py-8 dark:bg-night-700 sm:flex-row">
+            <div class="mb-4 flex items-center justify-between">
+              <div class="flex-col items-center">
+                <h3 class="text-md font-bold text-gray-900 dark:text-night-50">Despesas</h3>
+                <span class="text-sm text-gray-400 dark:text-night-300">Atualizado à 37 minutos</span>
+              </div>
+              <button
+                class="flex-none rounded-md bg-gray-100 px-4 py-2.5 text-xs font-semibold text-gray-500 hover:bg-gray-200 dark:bg-night-600 dark:text-night-200 dark:hover:bg-night-500">
+                Adicionar Despesa
+              </button>
+            </div>
+          
+            <div class="relative overflow-x-auto">
+              <table class="w-full table-auto">
+                <!--Table head-->
+                <thead class="text-xs uppercase text-gray-400 dark:text-night-300">
+                  <tr>
+                    <th class="py-3 text-left"></th>
+                    <th class="py-3 text-right">Valor</th>
+                    <th class="py-3 text-right"></th>
+                  </tr>
+                </thead>
+                <!--end Table head-->
+                <!--Table body-->
+                <tbody>
+                  <tr
+                    *ngFor="let auction of activeAuction2"
+                    class="border-b border-dashed border-gray-200 hover:bg-gray-100 dark:border-night-500 dark:hover:bg-night-600">
+                    <td class="py-2 pr-2">
+                      <div class="flex items-center">
+                        <img [src]="auction.image" class="mr-2 h-10 w-10 flex-none rounded-lg" alt="" />
+                        <div class="flex flex-col justify-items-start">
+                          <a href="#" class="mb-1 text-sm font-semibold text-gray-900 dark:text-night-100 dark:hover:text-primary-500">
+                            {{auction.title}}</a>
+                          <span class="text-xs font-semibold text-gray-400 dark:text-night-300">{{ auction.date }}</span>
+                        </div>
+                      </div>
+                    </td>
+                    <td class="py-2 pl-2 text-right">
+                      <span class="text-sm font-semibold text-gray-400 dark:text-night-200">{{ auction.price | currency }}</span>
+                    </td>
+                    <td class="py-2 pl-2 text-right">
+                      <div class="flex justify-end">
+                        <button
+                          href="#"
+                          class="flex h-7 w-7 items-center justify-center rounded-md bg-gray-200 text-gray-400 dark:bg-night-500 dark:text-night-300">
+                          |||
+                        </button>
+                      </div>
+                    </td>
+                    
+                  </tr>
+                </tbody>
+                <!--end::Table body-->
+              </table>
+            </div>
+          </div>
+        </div>
+        <!-- end Dual Card -->
     </div>
 </div>
