feat: inicialize feature balances.

--- a/finday-web-app/src/app/modules/home/home.component.html
+++ b/finday-web-app/src/app/modules/home/home.component.html
@@ -62,69 +62,7 @@
         <!-- Single Card -->
         <!-- Card -->
         <div class="flex h-[420px] flex-col rounded-lg bg-white p-8 pt-2 dark:bg-night-700">
-            <!-- Image -->
-            <!-- Description  -->
-            <h2 class="text-md mt-6 font-semibold text-gray-900 dark:text-night-50 pb-2">Saldos</h2>
-            <div class="flex items-end justify-between text-sm font-semibold text-gray-800 dark:text-night-300">
-                FLASH:
-                <span>R$ 1.528,76</span>
-            </div>
-            <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300">
-              Valor Gasto:
-              <span>R$ 1.528,76</span>
-            </div>
-            <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300 pb-2">
-              Valor entrada Total:
-              <span>R$ 1.528,76</span>
-            </div>
-            <div class="flex items-end justify-between text-sm font-semibold text-gray-800 dark:text-night-300">
-                SALÁRIO CAST:
-                <span>R$ 1.528,76</span>
-            </div>
-            <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300">
-              Valor Gasto:
-              <span>R$ 1.528,76</span>
-            </div>
-            <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300 pb-2">
-              Valor entrada Total:
-              <span>R$ 1.528,76</span>
-            </div>
-            <div class="flex items-end justify-between text-sm font-semibold text-gray-800 dark:text-night-300">
-                ALELO:
-                <span>R$ 1.528,76</span>
-            </div>
-            <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300">
-              Valor Gasto:
-              <span>R$ 1.528,76</span>
-            </div>
-            <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300 pb-2">
-              Valor entrada Total:
-              <span>R$ 1.528,76</span>
-            </div>
-            <div class="flex items-end justify-between text-sm font-semibold text-gray-800 dark:text-night-300">
-                SALÁRIO FREELA:
-                <span>R$ 1.528,76</span>
-            </div>
-            <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300">
-              Valor Gasto:
-              <span>R$ 1.528,76</span>
-            </div>
-            <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300 pb-2">
-              Valor entrada Total:
-              <span>R$ 1.528,76</span>
-            </div>
-            
-            <!-- Buttons -->
-            <div class="mt-6 flex items-center justify-between">
-                <button
-                    class="flex-none rounded-md bg-primary-500 px-4 py-2.5 text-xs font-semibold text-white hover:bg-primary-600">
-                    Adicionar Carteira
-                </button>
-                <button
-                    class="flex-none rounded-md bg-gray-100 px-4 py-2.5 text-xs font-semibold text-gray-500 hover:bg-gray-200 dark:bg-night-600 dark:text-night-200 dark:hover:bg-night-500">
-                    Origens
-                </button>
-            </div>
+            <app-balance></app-balance>
         </div>
         <!-- end Card -->
         <!-- end Single Card -->
