--- a/finday-web-app/src/app/modules/wallets/components/balance/balance.component.html
+++ b/finday-web-app/src/app/modules/wallets/components/balance/balance.component.html
@@ -1,54 +1,19 @@
-<!-- Image -->
 <!-- Description  -->
 <h2 class="text-md mt-6 font-semibold text-gray-900 dark:text-night-50 pb-2">Saldos</h2>
-<div class="flex items-end justify-between text-sm font-semibold text-gray-800 dark:text-night-300">
-    FLASH:
-    <span>R$ 1.528,76</span>
-</div>
-<div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300">
-    Valor Gasto:
-    <span>R$ 1.528,76</span>
-</div>
-<div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300 pb-2">
-    Valor entrada Total:
-    <span>R$ 1.528,76</span>
-</div>
-<div class="flex items-end justify-between text-sm font-semibold text-gray-800 dark:text-night-300">
-    SALÁRIO CAST:
-    <span>R$ 1.528,76</span>
-</div>
-<div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300">
-    Valor Gasto:
-    <span>R$ 1.528,76</span>
-</div>
-<div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300 pb-2">
-    Valor entrada Total:
-    <span>R$ 1.528,76</span>
-</div>
-<div class="flex items-end justify-between text-sm font-semibold text-gray-800 dark:text-night-300">
-    ALELO:
-    <span>R$ 1.528,76</span>
-</div>
-<div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300">
-    Valor Gasto:
-    <span>R$ 1.528,76</span>
-</div>
-<div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300 pb-2">
-    Valor entrada Total:
-    <span>R$ 1.528,76</span>
-</div>
-<div class="flex items-end justify-between text-sm font-semibold text-gray-800 dark:text-night-300">
-    SALÁRIO FREELA:
-    <span>R$ 1.528,76</span>
-</div>
-<div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300">
-    Valor Gasto:
-    <span>R$ 1.528,76</span>
-</div>
-<div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300 pb-2">
-    Valor entrada Total:
-    <span>R$ 1.528,76</span>
-</div>
+<ng-container *ngFor="let item of balances">
+    <div class="flex items-end justify-between text-sm font-semibold text-gray-800 dark:text-night-300">
+        {{item.nameWallet}}:
+        <span>R$ {{item.currentValue}}</span>
+    </div>
+    <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300">
+        Valor Gasto:
+        <span>R$ {{item.debitedValue}}</span>
+    </div>
+    <div class="pl-2 pr-2 flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300 pb-2">
+        Valor entrada Total:
+        <span>R$ {{item.creditedValue}}</span>
+    </div>
+</ng-container>
 
 <!-- Buttons -->
 <div class="mt-6 flex items-center justify-between">
