feat: add mask to currency itens. add service to get wallets. Test form to include launchs.

--- a/finday-web-app/src/app/modules/launch/components/revenue-card/revenue-card.component.html
+++ b/finday-web-app/src/app/modules/launch/components/revenue-card/revenue-card.component.html
@@ -16,7 +16,9 @@
         </app-field-errors>
       </div>
       <div class="relative">
-        <input type="text" id="value" formControlName="value" class="peer block" placeholder=" " />
+        <input type="text" id="value" formControlName="value" 
+          class="peer block" placeholder=" "
+          currencyMask [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }" />
         <label
           for="value"
           class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-95 transform bg-white px-2 text-sm text-gray-500 duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary-600 dark:bg-night-700 dark:text-night-200">
@@ -38,7 +40,9 @@
         </app-field-errors>
       </div>
       <div class="relative">
-        <input type="text" id="wallet" formControlName="wallet" class="peer block" placeholder=" " />
+        <select name="wallet" id="wallet" formControlName="wallet">
+          <option *ngFor="let wallet of listWallets" [ngValue]="wallet.id">{{wallet.name}}</option>
+        </select>
         <label
           for="wallet"
           class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-95 transform bg-white px-2 text-sm text-gray-500 duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary-600 dark:bg-night-700 dark:text-night-200">
